--- a/src/main/webapp/WEB-INF/views/appusers/update.jspx
+++ b/src/main/webapp/WEB-INF/views/appusers/update.jspx
@@ -8,5 +8,6 @@
         <field:input field="userid" id="c_com_softrism_sencha_backend_domain_AppUser_userid" z="ehYDHApLK0Hnes9MTVtuDmdc/PA="/>
         <field:input field="password" id="c_com_softrism_sencha_backend_domain_AppUser_password" z="ykzpXFX1LqLBFuGcroNcEcMUMrc="/>
         <field:input field="userEmail" id="c_com_softrism_sencha_backend_domain_AppUser_userEmail" z="jUFMBa4OK08wumG68eF67pr+IPw="/>
+        <field:input field="roleName" id="c_com_softrism_sencha_backend_domain_AppUser_roleName" z="yrMJZ//rvVI9EgTWuZLF+qlzdbc="/>
     </form:update>
 </div>
